--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -51,4 +51,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.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 }}
